# HackPit

./: .env.example  .gitignore  README.md
backend/: .gitignore  README.md  attack_path.py  chat.py  llm.py  main.py  orchestrator.py  pyproject.toml  report.py  run_safety_tests.sh  sessions.py  test_attack_path.py  test_cockpit.py  test_engagement.py  test_kali.py  test_loop.py
backend/cockpit/: __init__.py  allowlist.py  config.py  executor.py  kali.py  models.py  router.py  runstore.py  sandbox.py
docker/: Dockerfile.sandbox  README.md  docker-compose.yml
docker/proof/: PROOF.md  isolation_proof.sh  kali_open_egress_proof.sh
docs/: COCKPIT-SESSION-LOG.md  README.md  build-notes.md  cockpit-loop.md  cockpit-plan.md  design-mock.html
frontend/: .gitignore  package-lock.json  package.json
frontend/public/video/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AttackPathScreen.tsx  Breadcrumb.tsx  CategoryCard.tsx  CategoryGrid.tsx  CategoryScreen.tsx  CockpitAttackMap.tsx  CockpitEngagement.tsx  CockpitLoop.tsx  CockpitScreen.tsx  CockpitView.tsx  CommandPalette.tsx  ComposingLoader.tsx  CopyButton.tsx  EngagementAssistant.tsx  EngagementScreen.tsx  EngagementsList.tsx  (+21 more)
pipeline/: README.md  __init__.py  consolidate.py  curate_apply.py  curate_scan.py  embed.py  entry.schema.json  exclude.json  images.py  ingest.py  ingest_authored.py  ingest_box_pdfs.py  ingest_notes.py  manual_captions.json  pyproject.toml  schema.py  scripts_index.py  search.py  validate_attack_path.py
pipeline/authored/: authored_entries.jsonl
(+17 files in other folders)
