[project]
name = "hackpit-pipeline"
version = "0.0.1"
description = "HackPit knowledge ingestion & normalization pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pydantic>=2",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "pyyaml>=6",
]

[tool.uv]
package = false
